Day and date feature added

--- a/clock/index.html
+++ b/clock/index.html
@@ -22,6 +22,8 @@
                 <span class="analog J">10</span>
                 <span class="analog K">11</span>
                 <span class="analog L">12</span>
+                 <!-- analogs -->
+                 <span id="Day"></span>
                 <div id="hours"></div>
                 <div id="min"></div>
                 <div id="sec"></div>
